--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="bundle.js"></script>
 </head>
 
-<body style="margin: 0px">
+<body style="margin: 0px;padding: 0px">
 </body>
 
 </html>
